clusters/firefly/apps/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: linuxserver/nextcloud:arm64v8-30.0.6
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nextcloud-config
              mountPath: /config
            - name: nextcloud-data
              mountPath: /data
      volumes:
        - name: nextcloud-config
          persistentVolumeClaim:
            claimName: nextcloud-config
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
      restartPolicy: Always
