clusters/firefly/apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: nextcloud
spec:
  rules:
    - host: cloud.sargeant.co # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 443
  tls:
    - hosts:
        - cloud.sargeant.co # Replace with your domain
      secretName: nextcloud-tls # Secret for TLS certificate
